Fix input bottom border shifting on focus in Firefox

--- a/src/css/_map-toolbar.css
+++ b/src/css/_map-toolbar.css
@@ -89,6 +89,7 @@
     background-color: transparent;
     appearance: none;
     border: 0;
+    border-bottom: 1px solid transparent;
     outline: none;
     color: white;
     font-size: 12px;
